update scala worksheet

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
 *.metal
 *.bsp
 *.metal-scala-cli
+*.bsp.json
+*.bsp.lock
+*.metals
+*.metals.json
+*.metals.log
+*.metals.lock
+*.metals.log.db
+.metals/
+*.metals.json
+.metals.json
+.metals/readonly
+.metals/readonly.json
+*.class
+*.jar
+*.war
+*.ear
+*.sbt
+*.sbt.lock
+*.sbt.ivy
+*.vscode
+.idea/
